--- a/WordleCheat/styles.css
+++ b/WordleCheat/styles.css
@@ -1,98 +1,93 @@
+body {
+  margin: 0px;
+}
+
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    border-radius: 8px;
-    color: white;
-    padding: 15px 32px;
-    margin-bottom: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    transition-duration: 0.4s;
-  }
-  .button:hover {
-    background-color: #285e2a; /* Green */
-    color: white;
-  }
-  .button:active {
-    background-color: #3e8e41;
-    box-shadow: 5px 5px #666;
-    transform: translate(-4px, -4px);
-  }
-  
-  
+  background-color: #4CAF50;
+  /* Green */
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 5px 12px;
+  margin-bottom: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  transition-duration: 0.4s;
+}
 
-.center_vert {
+.button:hover {
+  background-color: #285e2a;
+  /* Green */
+  color: white;
+}
 
-  margin: 0;
-  position:relative;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 5px 5px #666;
+  transform: translate(-4px, -4px);
+}
+
+.titles {
+  /* padding: 8px; */
+  margin: 8px 0px;
+}
+
+.word-list {
+
+  font-family: monospace; font-size: 16px; font-style: normal; font-variant: normal; font-weight: 300; line-height: 22px;   
+  margin: 8px 8px;
+  word-spacing: 16px;
 }
 
 .center_horiz {
 
-    margin: auto;
-    /* width: 50%; */
-    text-align: center;
-    /* padding: 10px; */
-}
-
-.column {
-    float: left;
-    /* width: 20%; */
-    padding: 10px;
-    height: 140px; /* Should be removed. Only for demonstration */
-  }
-  
-  /* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+  margin: auto;
+  /* width: 50%; */
+  text-align: center;
+  /* padding: 10px; */
 }
 
 .charCorrectPlace {
-    font-size: large;
-    background-color: rgb(112, 165, 32);
-    text-align: center;
-    border-color: rgb(138, 11, 11);
-    border-width: 1px; 
-    border-style:solid;
-    border-radius: 12px;
+  font-size: large;
+  background-color: rgb(112, 165, 32);
+  text-align: center;
+  border-color: rgb(138, 11, 11);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 12px;
+  margin: 0px 2px;
 }
 
 .charWrongPlace {
-    font-size: large;
-    background-color: rgb(241, 184, 59);
-    text-align: center;
-    border-color: rgb(138, 11, 11);
-    border-width: 1px; 
-    border-style:solid;
-    border-radius: 12px;
+  font-size: large;
+  background-color: rgb(241, 184, 59);
+  text-align: center;
+  border-color: rgb(138, 11, 11);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 12px;
+  margin: 4px 2px;
 }
 
 .charNotInWord {
-    font-size: large;
-    background-color: rgb(199, 197, 197);
-    text-align: center;
-    border-color: rgb(138, 11, 11);
-    border-width: 1px; 
-    border-style:solid;
-    border-radius: 12px;
+  font-size: large;
+  background-color: rgb(199, 197, 197);
+  text-align: center;
+  border-color: rgb(138, 11, 11);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 12px;
 }
 
 .bordered {
-    border-color: black;
-    border-width: 1px; 
-    border-style:solid;
-    border-radius: 12px;
-    padding: 8px;
-    /* border-block-start-color: ; */
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 12px;
+  padding: 8px;
 
-    width: 80%; 
-    margin-bottom: 10px;
+  width: 90%;
+  margin-bottom: 10px;
 }
